--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         // Endereços das plataformas de IA
         const chatGPTUrl = 'https://chat.openai.com/';
-        const geminiUrl = 'https://gemini.google.com/app';
+        const geminiUrl = 'https://gemini.google.com/?hl=pt-BR';
         const deepseekUrl = 'https://chat.deepseek.com/';
         
         // Função para gerar e exibir o prompt
