--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         Acesse o ChatGPT
                     </button>
                     <button
-                        id="gemini-btn"
-                        class="button w-full bg-blue-600 text-white font-bold py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+                        id="copilot-btn"
+                        class="button w-full bg-red-600 text-white font-bold py-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
                     >
-                        Acesse o Gemini
+                        Acesse o Copilot
                     </button>
                     <button
                         id="deepseek-btn"
@@ -110,12 +110,12 @@
         const generateButton = document.getElementById('generate-button');
         const copyButton = document.getElementById('copy-button');
         const chatgptBtn = document.getElementById('chatgpt-btn');
-        const geminiBtn = document.getElementById('gemini-btn');
+        const copilotBtn = document.getElementById('gemini-btn');
         const deepseekBtn = document.getElementById('deepseek-btn');
 
         // Endereços das plataformas de IA
         const chatGPTUrl = 'https://chat.openai.com/';
-        const geminiUrl = 'https://gemini.google.com/?hl=pt-BR';
+        const copilotUrl = 'https://copilot.microsoft.com/';
         const deepseekUrl = 'https://chat.deepseek.com/';
         
         // Função para gerar e exibir o prompt
